# CudaRL-Arena

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.new  CONTRIBUTING.md  README.md  REFACTORING_REPORT.md  binding_test.py  commit_instructions.md  fix_binding_test.py  fix_headers.bat  run_gui.py  run_training.py  vector_add.cu
docs/: ARCHITECTURE.md  README.md
godot/: README.md  cudarl.gdextension.in
godot/Scenes/: GridWorld.gd  GridWorld.tscn
godot/gdextension/: bindings.cpp  bindings.h  plugin.gdextension
godot/godot-cpp/: README.md
python/: setup.py
python/agent/: dqn_agent.py  qlearning_agent.py
python/cudarl/: __init__.py  agent.py  environment.py  mock_env.py  trainer.py
python/interface/: __init__.py
python/scripts/: run_demo.py  train.py  train_agent.py  train_dqn.py
python/visualization/: gridworld_visualizer.py
src/: cuda_test.cu  environment.cu  environment.h  environment_bridge.cu  environment_bridge.h  gui.py  kernels.cu  kernels.cuh  main.cpp  main.cu  mvp.py  python_bindings.cpp  python_test.cu  q_learning.cu  q_learning.cuh  train.py  visualize.py
src/ai/: CMakeLists.txt  ai_interface.h  dqn_cuda.cu  qlearning_cuda.cu
src/bindings/: CMakeLists.txt  bindings.cpp  godot_bindings.cpp  python_bindings.cpp  sdl2_test.cpp
src/core/: cuda_utils.h  environment.h  main.cu
src/game/: CMakeLists.txt  gridworld.cpp  gridworld.h  procedural_gridworld.cpp  procedural_gridworld.h
src/gpu/: cuda_test.cu  environment.cu  kernels.cu  kernels.cuh
tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CudaRL-Arena.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cuda_test.vcxproj  cuda_test.vcxproj.filters  cudarl_app.vcxproj  cudarl_app.vcxproj.filters  cudarl_core.vcxproj  cudarl_core.vcxproj.filters  run.vcxproj  run.vcxproj.filters  run_cuda_test.vcxproj  run_cuda_test.vcxproj.filters  test_environment.cpp  test_environment.py
tests/cuda_test.dir/Debug/: cuda_test.cu.cache
tests/cuda_test.dir/Debug/cuda_test.tlog/: CudaCompile.read.1u.tlog  CustomBuild.command.1.tlog
tests/cudarl_app.dir/Debug/: cudarl_app.exe.recipe  cudarl_app.ilk  main.cu-838777930.deps  main.cu.cache
tests/cudarl_app.dir/Debug/cudarl_app.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
tests/cudarl_core.dir/Debug/: cudarl_core.lib.recipe  environment.cu-1937050887.deps  environment.cu.cache
tests/cudarl_core.dir/Debug/cudarl_core.tlog/: CudaCompile.read.1u.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
tests/lib/Debug/: cudarl_core.lib
tests/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
